padding adjust + scrollbar hover fix

--- a/src/components/Breakdown/_breakdown.scss
+++ b/src/components/Breakdown/_breakdown.scss
@@ -8,7 +8,7 @@
     grid-area: 3/1 / span 1 / span 1;
   }
   &__header {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     align-self: flex-start;
 
     @media screen and (max-width: 1000px) {
