--- a/src/components/Overview/_overview.scss
+++ b/src/components/Overview/_overview.scss
@@ -7,7 +7,7 @@
     align-items: center;
   }
   &__header {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     @media screen and (max-width: 1000px) {
       width: $container-width-l;
     }
