--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -60,4 +60,5 @@ button {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: $color-grey-dark;
+  background-clip: content-box;
 }
