--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -12,9 +12,9 @@
   width: min(156rem, calc(100% - 5rem));
   background-color: $color-black;
   border-radius: $corner-radius-main;
-  padding: 4rem 0;
+  padding: 2rem 0 3rem;
   box-shadow: -2px 6px 20px 3px rgba(#000, 0.4);
-  margin: 2rem 0;
+  margin: 1rem 0;
 
   @media screen and (max-width: 1000px) {
     margin: 0;
