--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -20,10 +20,10 @@ $color-group-3: rgb(238, 224, 30);
 $color-group-4: rgb(238, 39, 172);
 $color-group-5: rgb(148, 148, 148);
 
-$font-size-xxl: 4.2rem;
-$font-size-xl: 3.6rem;
-$font-size-l: 2.4rem;
-$font-size-m: 1.8rem;
+$font-size-xxl: 3.6rem;
+$font-size-xl: 3.2rem;
+$font-size-l: 2rem;
+$font-size-m: 1.6rem;
 $font-size-s: 1.4rem;
 $font-size-xs: 1.2rem;
 
